--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="logo">
-        Chibib and Chiboo - Fast and Secure Browser
+        Chibib and Chiboo - Slow and Vulnerable Internet Browsing
     </h1>
     <form id="urlf">
         <h1>Go to a URL</h1>
