--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <input type="text" id="url" placeholder="Type URL"> <button type="submit">Go</button>
     </form>
     <form id="searchf">
-        <h1>Search Google</h1>
+        <h1>Search DuckDuckGo.com</h1>
         <input type="text" id="search" placeholder="Search"> <button type="submit">Search</button>
     </form>
-    <a href="https://www.google.com">Go to google.com</a>
+    <a href="https://duckduckgo.com">Go to DuckDuckGo.com</a>
 <script src="index.js"></script>
 </body>
 </html>
